--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Terminal Cool Commands Demo",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu", 
-  "postCreateCommand": "./setup.sh",
+  "postCreateCommand": "./.devcontainer/setup.sh",
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {}
   }
